--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME="Covid Relai"
+APP_ENV=production
 APP_KEY=base64:4JsZchKBwjyTUNZp5h5LXK6ov6WeEysHaq9VXlmNK7k=
 APP_DEBUG=true
 APP_URL=http://localhost
