--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME="Covid Relai"
 APP_ENV=production
 APP_KEY=base64:4JsZchKBwjyTUNZp5h5LXK6ov6WeEysHaq9VXlmNK7k=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://covidrelaiapi.herokuapp.com/
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -10,9 +10,10 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=covidrelai
-DB_USERNAME=root
-DB_PASSWORD='B@m@n@n1411'
+DATABASE_URL=mysql://b6b662da20f08e:18b05d40@us-cdbr-east-03.cleardb.com/heroku_e87020a55b1fe37?reconnect=true
+DB_DATABASE=heroku_e87020a55b1fe37
+DB_USERNAME=b6b662da20f08e
+DB_PASSWORD=18b05d40
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
