--- a/.env
+++ b/.env
@@ -3,9 +3,12 @@ APP_ENV=production
 APP_KEY=base64:4JsZchKBwjyTUNZp5h5LXK6ov6WeEysHaq9VXlmNK7k=
 APP_DEBUG=true
 APP_URL=https://covidrelaiapi.herokuapp.com/
+API_KEY="8f428332-c763-48cb-88db-b28b7f8d1bab"
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
+
+
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -14,6 +17,7 @@ DATABASE_URL=mysql://b6b662da20f08e:18b05d40@us-cdbr-east-03.cleardb.com/heroku_
 DB_DATABASE=heroku_e87020a55b1fe37
 DB_USERNAME=b6b662da20f08e
 DB_PASSWORD=18b05d40
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
