--- a/.env.example
+++ b/.env.example
@@ -7,12 +7,13 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+//DB_CONNECTION=mysql
+//DB_HOST=127.0.0.1
+//DB_PORT=3306
+//DATABASE_URL=mysql://b6b662da20f08e:18b05d40@us-cdbr-east-03.cleardb.com/heroku_e87020a55b1fe37?reconnect=true
+//DB_DATABASE=heroku_e87020a55b1fe37
+//DB_USERNAME=b6b662da20f08e
+//DB_PASSWORD=18b05d40
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
