--- a/.env
+++ b/.env
@@ -12,10 +12,10 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DATABASE_URL=mysql://b6b662da20f08e:18b05d40@us-cdbr-east-03.cleardb.com/heroku_e87020a55b1fe37?reconnect=true
-DB_DATABASE=heroku_e87020a55b1fe37
-DB_USERNAME=b6b662da20f08e
-DB_PASSWORD=18b05d40
+
+DB_DATABASE=covidrelai
+DB_USERNAME=root
+DB_PASSWORD=B@m@n@n1411
 
 
 BROADCAST_DRIVER=log
