--- a/.env.example
+++ b/.env.example
@@ -7,15 +7,15 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-P4rGRq5Gz6eo9KTnlmCXi00XgnGkZTR0ZYAhYgYZ
 
-//DB_CONNECTION=mysql
-//DB_HOST=127.0.0.1
-//DB_PORT=3306
-//DATABASE_URL=mysql://b6b662da20f08e:18b05d40@us-cdbr-east-03.cleardb.com/heroku_e87020a55b1fe37?reconnect=true
-//DB_DATABASE=heroku_e87020a55b1fe37
-//DB_USERNAME=b6b662da20f08e
-//DB_PASSWORD=18b05d40
+
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DATABASE_URL=
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
